<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DataProtectionActivity">

    <!-- Imagen de cabecera -->
    <ImageView
        android:id="@+id/header_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/headerandfooter"
        android:layout_marginTop="-125dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Título -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/DataProtectionActivity_Logintitle_title"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/header_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Contenedor de contenido -->
    <androidx.cardview.widget.CardView
        android:id="@+id/content_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Explicación de protección de datos -->
            <TextView
                android:id="@+id/data_protection_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DataProtectionActivity_data_protection_explanation"
                android:paddingTop="16dp"
                android:layout_marginBottom="16dp" />

            <!-- Botón de regreso -->
            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DataProtectionActivity_data_protection_button"
                app:layout_constraintTop_toBottomOf="@id/data_protection_explanation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Imagen de pie de página -->
    <ImageView
        android:id="@+id/footer_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/headerandfooter"
        android:layout_marginBottom="-125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
